# tray-bright

./: Cargo.toml  LICENSE  README.md  build.rs  justfile
.claude/: settings.local.json
.github/workflows/: release.yml
assets/: tray-bright.desktop
assets/icons/: icon.icns
src/: main.rs  monitor.rs  monitors.rs  os.rs  ui.rs
src/platform/: linux.rs  mac.rs  macos.rs  mod.rs  windows.rs
