[package]
name = "tray-bright"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
eframe = {version ="0.33.3", default-features = false, features = ["glow", "accesskit", "default_fonts", "wayland", "x11"]}
egui = "0.33.3"
tray-icon = "0.21.3"

[target.'cfg(windows)'.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
wmi = "0.18.0"

[target.'cfg(windows)'.dependencies.windows]
version = ">=0.59, <=0.62"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Devices_Display",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
