[package]
name = "tray-bright"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
eframe = { version = "0.33.3", default-features = false, features = ["glow", "default_fonts", "wayland", "x11"] }
egui = "0.33.3"
image = { version = "0.25", default-features = false, features = ["png"] }
tray-icon = "0.21.3"
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
wmi = "0.18.0"

[target.'cfg(windows)'.dependencies.windows]
version = ">=0.59, <=0.62"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Devices_Display",
  "Win32_UI_WindowsAndMessaging",
]

# --- Linux-only dependencies ---
[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib"] }

# --- macOS-only dependencies ---
[target.'cfg(target_os = "macos")'.dependencies]
ddc-macos = "0.2"
ddc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSObject"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSResponder", "NSApplication"] }

# --- Windows build dependency (embed icon into .exe) ---
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.packager]
productName = "Tray Bright"
identifier = "com.saisandeepvaddi.traybright"
version = "0.1.0"
description = "System tray brightness control for external monitors"
authors = ["Sai Sandeep Vaddi"]
homepage = "https://github.com/saisandeepvaddi/tray-bright"
icons = ["assets/icons/32x32.png", "assets/icons/128x128.png", "assets/icons/256x256.png", "assets/icons/512x512.png", "assets/icons/icon.ico", "assets/icons/icon.icns"]
outDir = "./dist"
beforePackagingCommand = "cargo build --release"

binaries = [
  { path = "tray-bright", main = true }
]

# Windows — NSIS installer
[package.metadata.packager.nsis]
installMode = "currentUser"
compression = "lzma"
installerIcon = "assets/icons/icon.ico"

# macOS — DMG disk image
[package.metadata.packager.dmg]
windowSize = { width = 540, height = 380 }
appPosition = { x = 140, y = 180 }
appFolderPosition = { x = 400, y = 180 }

# Linux — .desktop entry and icons
[package.metadata.packager.deb]
desktopTemplate = "assets/tray-bright.desktop"

[[package.metadata.packager.resources]]
src = "assets/tray-bright.desktop"
target = "/usr/share/applications/tray-bright.desktop"

[[package.metadata.packager.resources]]
src = "assets/icons/512x512.png"
target = "/usr/share/icons/hicolor/512x512/apps/tray-bright.png"